--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -59,3 +59,5 @@ jobs:
       - uses: SonarSource/sonarqube-scan-action@v6
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          projectBaseDir: front/
