--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -58,6 +58,6 @@ jobs:
           fetch-depth: 0
       - uses: SonarSource/sonarqube-scan-action@v6
         env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN_FRONT }}
         with:
           projectBaseDir: front/
