--- a/front/sonar-project.properties
+++ b/front/sonar-project.properties
@@ -1,2 +1,10 @@
-sonar.projectKey=aleod-m_Gerez-un-projet-collaboratif-en-int-grant-une-demarche-CI-CD
 sonar.organization=aleod-m
+sonar.projectKey=aleod-m_bobapp-front
+
+sonar.language=ts
+sonar.sourceEncoding=UTF-8
+
+sonar.sources=src
+sonar.tests=src
+sonar.tests.inclusions=**/*.spec.ts,**/*.test.ts
+sonar.javascript.lcov.reportPaths=coverage/bobapp/lcov.info
