--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -1,4 +1,4 @@
-name: 'Sonar'
+name: 'SONAR'
 on:
   push:
     branches: main
@@ -38,11 +38,11 @@ jobs:
 
       - name: Build and analyze
         env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN_BACK }}
         run: | 
           mvn -B verify \
             org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
-            -Dsonar.projectKey=Aleod-m_Gerez-un-projet-collaboratif-en-int-grant-une-demarche-CI-CD
+            -Dsonar.projectKey=aleod-m_bobapp-back
   
 
   analyze-front:
@@ -52,10 +52,23 @@ jobs:
       run:
         working-directory: 'front'
 
+    strategy:
+      matrix:
+        node-version: [ 22 ]
+
     steps:
       - uses: actions/checkout@v6
         with:
           fetch-depth: 0
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v6
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
+          cache-dependency-path: '**/package-lock.json'
+      - run: |
+          npm ci
+          npm run test:ci
       - uses: SonarSource/sonarqube-scan-action@v6
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN_FRONT }}
